fix sidebar collapsed (redux)

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,8 @@
   clear: both;
   display: table;
 }
+
+
+.content{
+  transition: margin-left .6s;
+}
